Wed May 12 16:43:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): fixed broken output including nuls.

Wed May 12 16:34:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_intern.h (rb_vm_get_sourceline): add prototype.

Wed May 12 16:25:46 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): exponent needs 2 digits.

Mon May 10 06:59:19 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (rdoc): rdoc should depend main. Moreover when XRUBY
	  is miniruby, it can run after miniruby is built.

Tue May 11 15:14:30 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/utf_8.c: Add new alias UTF-8-HFS for UTF8-MAC.
	  http://www.gnu.org/software/emacs/NEWS.23.2

Wed May 12 09:21:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_initialize_m): fix wrong index for the lang
	  option's value 'N'. reported by Masaya TARUI via IRC.

Wed May 12 16:02:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): fill lower zeros.

Wed May 12 15:50:20 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rdoc/generator/ri.rb (generate): should load existing cache
	  before generating it.

Wed May 12 15:37:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): make minimum string representation.
	  [ruby-core:30145]

Wed May 12 15:04:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/lib/bigdecimal/math.rb (BigMath#log): improved
	  precision and performance. [ruby-dev:41295]

Tue May 11 14:26:00 2010  Kenta Murata <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/math.rb (atan),
	  test/bigdecimal/test_bigmath.rb (test_atan): explicitly specify
	  the precision for calculating a reciprocal number of an argument.
	  [Bug #3267]

Tue May 11 14:10:36 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (rb_big_abs_find_minbit): get rid of a warning of VC.

Tue May 11 14:09:21 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
